Update CSS styles in portal.css, fix typo in p_header.html, and update content in PORTAL pages

--- a/src/partials/PORTAL/1_pqrs/1_crear_1.html
+++ b/src/partials/PORTAL/1_pqrs/1_crear_1.html
@@ -362,6 +362,7 @@
                             >Autorizo el tratamiento de mis datos personales, de
                             conformidad con la
                             <a
+                              rel="noopener noreferrer"
                               aria-current="page"
                               class="dest"
                               href="https://dw2fbj22ajabu.cloudfront.net/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf"
@@ -375,25 +376,25 @@
                     <tr>
                       <td class="data2Col" colspan="2">
                         <h6>
-                          Tenga en cuenta las siguientes consideraciones al
+                          Ten en cuenta las siguientes consideraciones al
                           momento de subir archivos:
                         </h6>
                         <ul class="items">
                           <li>
                             <p>
-                              El peso maximo por archivo no debe superar el peso
+                              El peso máximo por archivo no debe superar el peso
                               de 5MB.
                             </p>
                           </li>
                           <li>
                             <p>
-                              Los unicos formatos permitidos son pdf, png, jpg,
+                              Los únicos formatos permitidos son pdf, png, jpg,
                               jpeg.
                             </p>
                           </li>
                           <li>
                             <p>
-                              Unicamente se pueden adjuntar maximo 5 documentos.
+                              Únicamente se pueden adjuntar máximo 5 documentos
                             </p>
                           </li>
                         </ul>
@@ -798,8 +799,8 @@
                     <tr>
                       <td class="dataCol first last" colspan="2">
                         <p>
-                          Actualmente ya existe una solicitud de bajo el número
-                          de radicado , el día .
+                          Actualmente ya existe una solicitud bajo el número de
+                          radicado
                         </p>
                       </td>
                       <td class="labelCol empty">&nbsp;</td>
