--- a/src/partials/PORTAL/2_certificados/1_certificados_colilla.html
+++ b/src/partials/PORTAL/2_certificados/1_certificados_colilla.html
@@ -232,7 +232,7 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <div class="pa_co_header">
-                      <h4>Generara colilla de pagos:</h4>
+                      <h4>Generar colilla de pagos:</h4>
                       <p class="text-lg">
                         Para obtener detalles sobre tu último pago, selecciona
                         <b>“Consultar último pago de mi mesada”</b>. Ahora bien,
@@ -240,7 +240,7 @@
                         anteriores, selecciona
                         <b>“Consultar varios periodos de mi mesada”</b> e indica
                         el rango de fechas que deseas revisar, ten en cuenta que
-                        puedes elegir maximo <b>4</b> meses consecutivos.
+                        puedes elegir máximo <b>4</b> meses consecutivos.
                       </p>
                     </div>
                     <div class="as__form_wrapper">
