--- a/src/partials/PORTAL/2_certificados/2_certificados_pension.html
+++ b/src/partials/PORTAL/2_certificados/2_certificados_pension.html
@@ -234,7 +234,7 @@
                         value="ConSalario"
                       />
                       <label for="ConSalario"
-                        >Consultar Certificado de pensiónado CON salario</label
+                        >Consultar certificado de pensión CON salario</label
                       ><br />
                       <input
                         id="SinSalario"
@@ -243,7 +243,7 @@
                         value="SinSalario"
                       />
                       <label for="SinSalario"
-                        >Consultar Certificado de pensiónado SIN salario</label
+                        >Consultar certificado de pensión SIN salario</label
                       ><br />
                     </div>
                   </td>
