--- a/src/partials/PORTAL/p_footer.html
+++ b/src/partials/PORTAL/p_footer.html
@@ -219,6 +219,24 @@
         >
       </p>
     </div>
+    <!-- <div class="modal_info info2">
+      <h3>¿Estás seguro?</h3>
+
+      <div class="modal_btns">
+        <button class="btn_modal btn_no">Regresar</button>
+        <button class="btn_modal btn_si">¡Si! estoy seguro</button>
+      </div>
+
+      <label class="modal_check" for="showcheck">
+        <span> Acepto el tratamiento de datos </span>
+        <input
+          id="showcheck"
+          name="showcheck"
+          type="checkbox"
+          class="checkbox checkbox-sm checkbox-info"
+        />
+      </label>
+    </div> -->
   </div>
   <!-- <label class="modal-backdrop" for="modal_data">Cerrar</label> -->
 </div>
