--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -51,7 +51,7 @@
             </li>
             <li>
               <a href="/PORTAL/2_certificados_ingreso.html"
-                >Certificado de ingresos y retenciones</a
+                >Certificado de Ingresos y Retenciones</a
               >
             </li>
           </ul>
