--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1512,7 +1512,7 @@ body {
       @apply bg-white text-azul-norm btn btn-sm btn-circle btn-ghost absolute right-2 top-2 h-8 w-8;
     }
     .modal_info {
-      @apply flex flex-col gap-y-2;
+      @apply flex-col gap-y-2;
       img {
         filter: drop-shadow(0px -2px 4px #3bc3ed);
         @apply max-w-[290px] w-full px-8 mx-auto -mt-16;
@@ -1531,20 +1531,19 @@ body {
       }
       .modal_btns {
         @apply flex gap-2;
-        button {
+        button,
+        a {
           @apply btn btn-sm py-2 h-auto;
         }
-        button.btn_si {
+        .btn_ok {
           @apply flex-auto bg-green-100 border-green-600 text-green-900 hover:bg-green-300;
         }
-        button.btn_no {
+        .btn_x {
           @apply flex-auto bg-red-100 text-red-900 border-red-600 hover:bg-red-300 w-1/3;
         }
       }
       p.read {
         @apply text-sm text-azul-norm;
-      }
-      &.info2 {
       }
     }
   }
