--- a/src/partials/PORTAL/3_actualizacion/2_contacto.html
+++ b/src/partials/PORTAL/3_actualizacion/2_contacto.html
@@ -740,7 +740,7 @@
                             <a
                               href="javascript:MultiSelectPicklist.handleMSPSelect%28%27pg%3Afm%3Apb%3Aj_id4%3Aj_id27%3Asubscriptions%27%29%3B"
                               ><img
-                                src="/img/arrow2_picklist_right.gif"
+                                src="https://proteccion--stage--c.sandbox.vf.force.com/img/arrow2_picklist_right.gif"
                                 alt="Add"
                                 width="17"
                                 height="17"
@@ -754,7 +754,7 @@
                             <a
                               href="javascript:MultiSelectPicklist.handleMSPUnSelect%28%27pg%3Afm%3Apb%3Aj_id4%3Aj_id27%3Asubscriptions%27%29%3B"
                               ><img
-                                src="/img/arrow2_picklist_left.gif"
+                                src="https://proteccion--stage--c.sandbox.vf.force.com/img/arrow2_picklist_left.gif"
                                 alt="Remove"
                                 width="17"
                                 height="17"
