--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -247,10 +247,10 @@
         }
       }
       th {
-        @apply w-1/3 px-2 text-left font-normal flex flex-col;
+        @apply w-full md:w-1/3 px-2 text-left font-normal flex flex-col;
       }
       td {
-        @apply w-2/3 px-2 text-left flex flex-col;
+        @apply w-full md:w-2/3 px-2 text-left flex flex-col mb-4 md:mb-0;
         select {
           @apply select select-bordered w-full;
         }
