--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -31,10 +31,21 @@
           </p> -->
 
           <p class="prop_anim">
-            <b>Conoce las condiciones generales del producto</b>
+            <b>Conoce las condiciones generales de las Rentas Vitalicias contratadas hasta el 17 de abril de 2024</b>
           </p>
           <a
             href="/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf"
+            target="_blank"
+            class="as__button prop_anim"
+          >
+            <span>INGRESA AQUÍ</span>
+            <i role="presentation" class="fa-light fa-arrow-right"></i>
+          </a>
+          <p class="prop_anim">
+            <b>Conoce las condiciones generales de las Rentas Vitalicias contratadas a partir del 17 de abril de 2024</b>
+          </p>
+          <a
+            href="/assets/documentos/Condiciones_Generales_Renta_Vitalicia_Inmediata_abril.pdf"
             target="_blank"
             class="as__button prop_anim"
           >
