Update date input styling and class in contacto.html

--- a/src/partials/PORTAL/3_actualizacion/2_contacto.html
+++ b/src/partials/PORTAL/3_actualizacion/2_contacto.html
@@ -304,7 +304,7 @@
                 <label for="pg:fm:pb:j_id4:j_id17:birthdate">
                   Fecha de nacimiento</label
                 >
-                <span class="dateInput dateOnlyInput"
+                <span class="dateInput dateOnlyInput flex gap-2 items-center"
                   ><input
                     disabled="true"
                     id="pg:fm:pb:j_id4:j_id17:birthdate"
@@ -313,6 +313,7 @@
                     size="12"
                     type="text"
                     value="21/01/1985"
+                    class="flex-1"
                   /><span class="dateFormat"
                     >[&nbsp;<a
                       href="javascript:DatePicker.insertDate('17/04/2024', 'pg:fm:pb:j_id4:j_id17:birthdate', true);"
