--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -31,7 +31,7 @@
           </p> -->
 
           <p class="prop_anim">
-            <b>Conoce las condiciones generales de las Rentas Vitalicias contratadas hasta el 17 de abril de 2024</b>
+            <b>Conoce las condiciones generales de las Rentas Vitalicias contradas hasta el 17 de abril de 2024</b>
           </p>
           <a
             href="/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf"
@@ -42,7 +42,7 @@
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
           <p class="prop_anim">
-            <b>Conoce las condiciones generales de las Rentas Vitalicias contratadas a partir del 17 de abril de 2024</b>
+            <b>Conoce las condiciones generales de las Rentas Vitalicias contradas a partir del 17 de abril de 2024</b>
           </p>
           <a
             href="/assets/documentos/Condiciones_Generales_Renta_Vitalicia_Inmediata_abril.pdf"
